runtime alloc heap size